; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/proc/extr_generic.c_proc_match.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/proc/extr_generic.c_proc_match.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.proc_dir_entry = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8*, %struct.proc_dir_entry*)* @proc_match to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @proc_match(i32 %0, i8* %1, %struct.proc_dir_entry* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca %struct.proc_dir_entry*, align 8
  store i32 %0, i32* %5, align 4
  store i8* %1, i8** %6, align 8
  store %struct.proc_dir_entry* %2, %struct.proc_dir_entry** %7, align 8
  %8 = load %struct.proc_dir_entry*, %struct.proc_dir_entry** %7, align 8
  %9 = getelementptr inbounds %struct.proc_dir_entry, %struct.proc_dir_entry* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load i32, i32* %5, align 4
  %12 = icmp ne i32 %10, %11
  br i1 %12, label %13, label %14

13:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  br label %24

14:                                               ; preds = %3
  %15 = load i8*, i8** %6, align 8
  %16 = load %struct.proc_dir_entry*, %struct.proc_dir_entry** %7, align 8
  %17 = getelementptr inbounds %struct.proc_dir_entry, %struct.proc_dir_entry* %16, i32 0, i32 1
  %18 = load i32, i32* %17, align 4
  %19 = load i32, i32* %5, align 4
  %20 = call i32 @memcmp(i8* %15, i32 %18, i32 %19)
  %21 = icmp ne i32 %20, 0
  %22 = xor i1 %21, true
  %23 = zext i1 %22 to i32
  store i32 %23, i32* %4, align 4
  br label %24

24:                                               ; preds = %14, %13
  %25 = load i32, i32* %4, align 4
  ret i32 %25
}

declare dso_local i32 @memcmp(i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
